# expenditure_tracking

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb
scripts/: categorize_transactions.py  constants.py
